# africa-web

./: .dockerignore  .gitignore  AI 关税计算器完整接口逻辑解析.md  CLOUDFLARE_WORKER_DEPLOY_GUIDE.md  PROJECT.md  README.md  ROADMAP.md  docker-compose.yml  netlify.toml  render.yaml  requirements.txt  vercel.json  《非洲零关税·操作清单》：5 月 1 日起全面实施.md  数据维护自动化方案（2026 年 1 月 1 日更新）.md  未命名文档 (1).md  非洲精品咖啡进口全链路成本工具-数据来源与计算逻辑.md  非洲精品咖啡进口全链路成本工具-设计文档.md  非洲进口选品与采购优先级清单：咖啡_可可_坚果、矿产、牛油果_鲜花.md  非洲零关税原产地证书：2026 年 5 月 1 日起的办理与申报.md  非洲零关税双轨并行方案：Python 与 Node.js 抉择.md  非洲零关税政策下，8大类高潜力配套服务商机全拆解.md  非洲零关税政策下，小众品类商机挖掘全指南.md  非洲零关税政策合规规则套利全指南.md  非洲零关税政策市场拓展全方案：从赚差价到建壁垒，国内+全球双循环落地指南.md  非洲零关税政策行业影响全景分析.md  非洲零关税政策：99%的人没看透的「非对称商机」全解构.md  非洲零关税规则套利「全流程可落地操作手册」.md  非洲零关税贸易全流程执行表.md  非洲零关税贸易：全面落地执行方案.md  非洲零关税选品优先级清单（2023 年 5 月 1 日）.md  非洲零关税：AI 工具站被动收入之路.md
.claude/: CLAUDE.md
.docs/: vercel-deploy.md
.github/: setup_gh_secrets.py
.github/workflows/: backend.yml  cloudflare-pages.yml  frontend.yml
.gstack/: browse.json
.wrangler/cache/: pages.json  wrangler-account.json
backend/: .dockerignore  .env.example  Dockerfile  enrich_data.py  fill_supplier_contacts.py  pyproject.toml  requirements-scrapers.txt  requirements.txt  run_enrich.py  sync_all_to_neon.py  sync_from_neon.py  sync_to_cloud.py  upload_enriched_data.py
backend/app/: main.py
backend/app/core/: config.py  logging.py  security.py
backend/app/models/: database.py
backend/app/routers/: admin.py  api_keys.py  auth.py  calculator.py  certificate.py  countries.py  debug_routes.py  freight.py  hs_codes.py  market_analysis.py  subscribe.py  subscription.py  suppliers.py
backend/app/schemas/: __init__.py
backend/app/services/: tariff.py
backend/app/services/ai/: __init__.py  client.py  prompts.py
backend/app/services/tariff/: __init__.py  constants.py  rules_engine.py
backend/pipeline/: __init__.py  exporter.py  run.py  writer.py
backend/scrapers/: README.md  __init__.py  base.py  cert_guides.py  countries.py  freight.py  hs_codes.py  market_analysis.py  runner.py  suppliers.py
clients/: 奖章徽标定制客户-网站策划方案v1.0.md  定制网站项目策划方案-模板v1.0.md
frontend/: .dockerignore  .env.example  .env.production  index.html  middleware.ts  package-lock.json  package.json  server.js  tailwind.config.js  vercel.json  vite.config.ts  wrangler.toml
frontend/.vercel/: project.json
frontend/functions/: _worker.js
frontend/public/: _redirects  _worker.js
frontend/src/: App.tsx  index.css
frontend/src/components/: InterestListPanel.tsx  Layout.tsx  ResourcesSection.tsx
frontend/src/data/: local.ts  products.ts
frontend/src/data/static/: cert_guides.json  countries.json  freight_routes.json  hs_codes.json  suppliers.json
frontend/src/design-system/: index.ts  theme.ts  tokens.ts
frontend/src/hooks/: useAppStore.ts  useTrackInit.ts
frontend/src/pages/: AccountPage.tsx  AdminPage.tsx  CalculatorPage.tsx  CertificatePage.tsx  CostCalculatorPage.tsx  DashboardPage.tsx  DatabasePage.tsx  FreightPage.tsx  GettingStartedPage.tsx  HSLookupPage.tsx  HomePage.tsx  LoginPage.tsx  OriginCheckPage.tsx  PolicyPage.tsx  PricingPage.tsx  ProductDiscoveryPage.tsx  RegisterPage.tsx  SuppliersPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  jwt.ts  track.ts
(+4 files in other folders)
