[project]
name = "africa-zero-backend"
version = "1.0.0"
description = "AfricaZero FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.0",
    "psycopg2-binary>=2.9.9",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = [
    "E501",     # line too long
    "B008",     # function call in default arg (too strict for FastAPI route handlers)
    "B904",     # raise statement in except loop (acceptable in this codebase)
    "B905",     # no explicit `loop` kwarg in `retry` (cosmetic)
    "C414",     # unneeded `list`/`set`/`dict` conversion (cosmetic)
    "E402",     # module-level import (acceptable in FastAPI lifespan patterns)
]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
disable_error_code = [
    "arg-type",   # too strict for legacy FastAPI code with dynamic dicts
    "assignment", # str | None assignment issues
    "union-attr", # optional chaining issues
    "list-item",  # mixed-type list literals
    "no-redef",   # guard-variable patterns
    "var-annotated", # untyped dict variables
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
